[package]
name = "rusty-micros"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.81"
aws-config = "1.5.4"
aws-credential-types = "1.2.0"
aws-sdk-s3 = "1.41.0"
aws-sdk-sqs = "1.35.0"
tokio = { version = "1.38.1", features = ["full"] }
tracing-subscriber = "0.3.18"

[dev-dependencies]
testcontainers = "0.20.1"
